# sylvia-iot-examples

./: Cargo.toml  README.md  config.json5
.github/workflows/: release.yaml
app-demo/: Cargo.toml  README.md
app-demo/doc/: api.md
app-demo/src/libs/: config.rs  data_handler.rs  mod.rs
app-demo/src/routes/: mod.rs
app-demo/src/routes/v1/: data.rs
dev-demo/: Cargo.toml  README.md
dev-demo/src/libs/: config.rs  dev_task.rs  mod.rs
lora-ifroglab/: Cargo.toml  README.md
lora-ifroglab/doc/: api.md
lora-ifroglab/src/libs/: config.rs  data_handler.rs  lora_task.rs  lora_usb.rs  mod.rs
lora-ifroglab/src/routes/: mod.rs
lora-ifroglab/src/routes/v1/: data.rs
