[package]
name = "app-demo"
version = "0.3.9"
authors = ["Chien-Hong Chan"]
edition = "2024"
description = "A simple application server for Sylvia-IoT demo."
readme = "README.md"

[dependencies]
axum = "0.8.7"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
general-mq = "0.3.12"
hex = "0.4.3"
json5 = "1.3.0"
log = "0.4.29"
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sylvia-iot-sdk = "0.3.12"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower-http = { version = "0.6.8", default-features = false, features = [
    "cors",
    "normalize-path",
    "timeout",
] }
url = "2.5.7"
