[package]
name = "dev-demo"
version = "0.3.9"
authors = ["Chien-Hong Chan"]
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
hex = "0.4.3"
i2cdev = "0.6.2"
json5 = "1.3.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sylvia-iot-sdk = "0.3.12"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-serial = "5.4.5"
