[package]
name = "lora-ifroglab"
version = "0.3.1"
authors = ["Chien-Hong Chan"]
edition = "2024"
description = "A simple LoRa network server implementation for Sylvia-IoT using iFrogLab LoRa USB dongle devices."
readme = "README.md"

[dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
async-trait = "0.1.88"
chrono = { version = "0.4.41" }
clap = { version = "4.5.40", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
general-mq = "0.3.5"
hex = "0.4.3"
json5 = "0.4.1"
log = "0.4.27"
rustls = "0.23.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sylvia-iot-sdk = "0.3.5"
tokio = { version = "1.45.1", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-serial = "5.4.5"
tower-http = { version = "0.6.6", default-features = false, features = [
    "cors",
    "normalize-path",
    "timeout",
] }
url = "2.5.4"
