[package]
name = "lora-ifroglab"
version = "0.4.0"
authors = ["Chien-Hong Chan"]
edition = "2024"
description = "A simple LoRa network server implementation for Sylvia-IoT using iFrogLab LoRa USB dongle devices."
readme = "README.md"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
async-trait = "0.1.89"
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
clap = { version = "4.5.54", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
general-mq = "0.4.0"
hex = "0.4.3"
json5 = "1.3.0"
log = "0.4.29"
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sylvia-iot-sdk = "0.4.0"
tokio = { version = "1.49.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-serial = "5.4.5"
tower-http = { version = "0.6.8", default-features = false, features = [
    "cors",
    "normalize-path",
    "timeout",
] }
url = "2.5.8"
